--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hotkeys-hook": "^5.0.1",
+    "react-slick": "^0.31.0",
     "react-spring": "^10.0.1",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.10",
     "three": "^0.176.0"
   },
   "devDependencies": {
@@ -29,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
