--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "aos": "^2.3.4",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.503.0",
-    "next": "15.3.1",
+    "next": "^16.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hotkeys-hook": "^5.0.1",
